...
    final _statusBarHeight = MediaQuery.of(context).padding.top;
    final _height = _screenHeight - _appBarHeight - _statusBarHeight;
    final radius = min(_height * 0.5 * 0.25, _screenWidth * 0.25);
    late var image;

    return Scaffold(
        key: const Key('userprofile_page'),
        backgroundColor: backgroundColor,
        appBar: _appBar,
        body: FutureBuilder(
            future: _done,
            builder: (BuildContext context, AsyncSnapshot<dynamic> snapshot) {
              Widget child;
...
