...
    final _screenHeight = MediaQuery.of(context).size.height;
    final _screenWidth = MediaQuery.of(context).size.width;
    final _appBarHeight = _appBar.preferredSize.height;
    final _statusBarHeight = MediaQuery.of(context).padding.top;

    return Scaffold(
      key: const Key('home_page'),
      appBar: _appBar,
      backgroundColor: Theme.of(context).backgroundColor,
      body: _buildHomeBody(_screenHeight - _appBarHeight - _statusBarHeight,
          _screenWidth, context),
    );
  }
...
